--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/jintopeterjp/todolist.git",
+  "homepage": "https://jintopeterjp.github.io/todolist/",
   "name": "todoapp",
   "private": true,
   "version": "0.0.0",
